docs: improve architecture and security documentation